Fix universal Corda artifact discovery